serial communication between rccbox an ir2mqtt

--- a/ir2mqtt.ini
+++ b/ir2mqtt.ini
@@ -3,11 +3,11 @@
 [global]
 loopDelay = 10
 debug = yes
-sessionData = data.txt
-telemetryData = telemetry.txt
+serial = COM3
+;simulate = data.dump
 
 [mqtt]
-host = localhost
+host = thebe
 port = 1883
 baseTopic = /sensors/iRacing
 
