adding pit command capability from rccbox to ir2mqtt

--- a/ir2mqtt.ini
+++ b/ir2mqtt.ini
@@ -11,7 +11,7 @@ serial = COM3
 
 # Uncomment to start the application using a data dump file from irsdk for 
 # testing/development purposes. 
-;simulate = data.dump
+simulate = data.dump
 
 [mqtt]
 # Hostname of a MQTT broker to connect to. Comment out to disable MQTT 
