--- a/ir2mqtt.ini
+++ b/ir2mqtt.ini
@@ -10,8 +10,9 @@ debug = yes
 serial = COM3
 
 # Uncomment to start the application using a data dump file from irsdk for 
-# testing/development purposes. 
-simulate = data.dump
+# testing/development purposes. The dump file can be created by issuing the 
+# command 'irsdk --dump data.dmp'
+;simulate = data.dump
 
 [mqtt]
 # Hostname of a MQTT broker to connect to. Comment out to disable MQTT 
