--- a/ir2mqtt.ini
+++ b/ir2mqtt.ini
@@ -12,7 +12,7 @@ serial = COM3
 # Uncomment to start the application using a data dump file from irsdk for 
 # testing/development purposes. The dump file can be created by issuing the 
 # command 'irsdk --dump data.dmp'
-;simulate = data.dump
+simulate = data.dump
 
 [mqtt]
 # Hostname of a MQTT broker to connect to. Comment out to disable MQTT 
