fix geographical time and light info

--- a/ir2mqtt.ini
+++ b/ir2mqtt.ini
@@ -2,17 +2,17 @@
 
 [global]
 # Generates additional debug output. All MQTT and serial communication will be 
-# logged. Comment out or set to no/false to disable
-debug = yes
+# logged. Comment out or set to yes/True to enable
+debug = no
 
 # Serial communication port to send data to. Comment out to disable serial
 # communication
-serial = COM3
+;serial = COM3
 
 # Uncomment to start the application using a data dump file from irsdk for 
 # testing/development purposes. The dump file can be created by issuing the 
 # command 'irsdk --dump data.dmp'
-simulate = data.dump
+;simulate = data.dmp
 
 [mqtt]
 # Hostname of a MQTT broker to connect to. Comment out to disable MQTT 
@@ -26,7 +26,7 @@ port = 1883
 baseTopic = /sensors/iRacing
 
 # Timezone used to publish the simulations TimeOfDay
-timezone=+0200
+timezone=CET
 
 [iracing]
 # Mapping of irsdk values to MQTT topics.
