--- a/ir2mqtt.ini
+++ b/ir2mqtt.ini
@@ -12,7 +12,7 @@ debug = no
 # Uncomment to start the application using a data dump file from irsdk for 
 # testing/development purposes. The dump file can be created by issuing the 
 # command 'irsdk --dump data.dmp'
-;simulate = data.dmp
+;simulate = data/limerock.dmp
 
 [mqtt]
 # Hostname of a MQTT broker to connect to. Comment out to disable MQTT 
