Retrieve list values by index

--- a/ir2mqtt.ini
+++ b/ir2mqtt.ini
@@ -12,7 +12,7 @@ debug = no
 # Uncomment to start the application using a data dump file from irsdk for 
 # testing/development purposes. The dump file can be created by issuing the 
 # command 'irsdk --dump data.dmp'
-;simulate = data/limerock.dmp
+;simulate = data/limerock-q.dmp
 
 [mqtt]
 # Hostname of a MQTT broker to connect to. Comment out to disable MQTT 
@@ -33,8 +33,25 @@ timezone=CET
 # Format: mqttTopic = irsdkField
 # The configuration key (mqtt topic is prepended by the baseTopic configuration 
 # value). So a configuration line
+#
 # eventType = WeekendInfo/EventType
+#
 # will post the EventType value from the iRacing WeekendInfo data structure on
 # the MQTT topic '/sensors/iRacing/eventType'
+#
+# For accessing list structures (e.g. Sessions in SessionInfo) you have to use 
+# array notation:
+#
+# sessionType = SessionInfo/Sessions[0]/SessionType
+#
+# You can use 'last' as a special index value to retrieve the last element from
+# the list. 
+#
+# Furthermore, you may use an other telemetry value as list index. Simply 
+# prefix that value with a hast mark '#':
+#
+# sessionType = SessionInfo/Sessions[#SessionNum]/SessionType
+
 eventType = WeekendInfo/EventType
-sessionType = SessionInfo/Sessions/SessionType
+practiceTrackState = SessionInfo/Sessions[0]/SessionTrackRubberState
+currentSessionType = SessionInfo/Sessions[#SessionNum]/SessionType
