--- a/ir2mqtt.ini
+++ b/ir2mqtt.ini
@@ -5,9 +5,9 @@
 # logged. Comment out or set to yes/True to enable
 debug = no
 
-# Serial communication port to send data to. Comment out to disable serial
+# Serial communication port(s) to send data to. Comment out to disable serial
 # communication
-;serial = COM3
+;serial = COM3,COM5
 
 # Uncomment to start the application using a data dump file from irsdk for 
 # testing/development purposes. The dump file can be created by issuing the 
