make serial telegrams configurable

--- a/ir2mqtt.ini
+++ b/ir2mqtt.ini
@@ -55,3 +55,14 @@ timezone=CET
 eventType = WeekendInfo/EventType
 practiceTrackState = SessionInfo/Sessions[0]/SessionTrackRubberState
 currentSessionType = SessionInfo/Sessions[#SessionNum]/SessionType
+
+[serial]
+# Mapping of irsdk values to serial telegrams
+# Format: telegramType = irsdkField
+# The resulting telegram sent over serial connection then has the Form
+# '#telegramType=irsdkField*'
+#
+# For specifying the irsdkvale to be sent see section [iracing]
+
+PFL = PitSvFlags
+PFU = PitSvFuel
