Better indirection possibilities on accessing irsdk values

--- a/ir2mqtt.ini
+++ b/ir2mqtt.ini
@@ -51,10 +51,30 @@ timezone=CET
 # prefix that value with a hast mark '#':
 #
 # sessionType = SessionInfo/Sessions[#SessionNum]/SessionType
+#
+# If a structured telemetry value is needed as list index, use '&' as separator:
+#
+# radio = RadioInfo/Radios[0]/Frequencies[#RadioInfo&Radios[0]&TunedToFrequencyNum]/FrequencyName
+#
+# LIMITATION: A double list index indirection like
+#
+# radio = RadioInfo/Radios[#RadioInfo&SelectedRadioNum]/Frequencies[#RadioInfo&Radios[#RadioInfo&SelectedRadioNum]&TunedToFrequencyNum]/FrequencyName
+#
+# DOES NOT WORK. 
+#
+# As alternative, use an already specified MQTT topic prefixed by '$' as 
+# indirection value:
+#
+# currentradio = RadioInfo/Radios[#RadioInfo&SelectedRadioNum]/RadioNum
+# radio = RadioInfo/Radios[$currentRadio]/Frequencies[#RadioInfo&Radios[$currentRadio]&TunedToFrequencyNum]/FrequencyName
 
 eventType = WeekendInfo/EventType
-practiceTrackState = SessionInfo/Sessions[0]/SessionTrackRubberState
+practiceTrackState = SessionInfo/Sessions[#SessionNum]/SessionTrackRubberState
 currentSessionType = SessionInfo/Sessions[#SessionNum]/SessionType
+ingarage = IsInGarage
+onpitroad = OnPitRoad
+currentradio = RadioInfo/Radios[#RadioInfo&SelectedRadioNum]/RadioNum
+radio = RadioInfo/Radios[$currentradio]/Frequencies[#RadioInfo&Radios[$currentradio]&TunedToFrequencyNum]/FrequencyName
 
 [serial]
 # Mapping of irsdk values to serial telegrams
@@ -66,3 +86,5 @@ currentSessionType = SessionInfo/Sessions[#SessionNum]/SessionType
 
 PFL = PitSvFlags
 PFU = PitSvFuel
+RTX = RadioInfo/Radios[$currentradio]/Frequencies[#RadioInfo&Radios[$currentradio]&TunedToFrequencyNum]/FrequencyName
+
