--- a/ir2mqtt.ini
+++ b/ir2mqtt.ini
@@ -3,16 +3,17 @@
 [global]
 # Generates additional debug output. All MQTT and serial communication will be 
 # logged. Comment out or set to yes/True to enable
-debug = no
+debug = yes
 
 # Serial communication port(s) to send data to. Comment out to disable serial
 # communication
-;serial = COM3,COM5
+serial = COM3
+;,COM5
 
 # Uncomment to start the application using a data dump file from irsdk for 
 # testing/development purposes. The dump file can be created by issuing the 
 # command 'irsdk --dump data.dmp'
-;simulate = data/limerock-q.dmp
+simulate = data/limerock-q.dmp
 
 [mqtt]
 # Hostname of a MQTT broker to connect to. Comment out to disable MQTT 
