--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -29,6 +29,7 @@ jobs:
           pip install -r requirements.txt
       - name: Build with executable and setup
         run: |
+          .\venv\Scripts\Activate.ps1
           pyinstaller --clean -F --add-binary ".\venv\Lib\site-packages\timezonefinder;timezonefinder" ir2mqtt.py
       - name: Upload setup
         uses: actions/upload-artifact@v3
