--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -9,7 +9,7 @@ on:
         type: string
 
 jobs:
-  build:
+  release:
 #    if: startsWith(github.ref, 'refs/tags/')
     runs-on: windows-latest
     strategy:
@@ -31,6 +31,7 @@ jobs:
           pip install -r requirements.txt
       - name: Build with executable and setup
         run: |
+          .\venv\Scripts\Activate.ps1
           pyinstaller --clean -F --add-binary ".\venv\Lib\site-packages\timezonefinder;timezonefinder" ir2mqtt.py
       - name: Create release
         uses: marvinpinto/action-automatic-releases@latest
